--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "class-validator": "^0.13.1",
+    "nanoid": "^3.1.30",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.0",
     "@nestjs/platform-fastify": "^8.0.9",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/swagger": "^5.1.0",
@@ -40,11 +43,13 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "class-transformer": "^0.4.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "fastify-swagger": "^4.12.3",
     "jest": "^27.0.6",
+    "mongoose": "^6.0.8",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
